# prune

./: .gitignore  CHANGES.md  CLAUDE.md  LICENSE.md  README.md  TODO.md  dune-project  prune.opam
docs/: DEBUGGING.md  GUIDELINES.md
lib/: analysis.ml  analysis.mli  cache.ml  cache.mli  comments.ml  comments.mli  doctor.ml  doctor.mli  dune  locate.ml  locate.mli  module_alias.ml  module_alias.mli  occurrence.ml  occurrence.mli  output.ml  output.mli  progress.ml  progress.mli  prune.ml  prune.mli  removal.ml  removal.mli  show.ml  show.mli  system.ml  system.mli  types.ml  types.mli  warning.ml  warning.mli
scripts/: README.md  setup-hooks.sh
test/: README.md  dune  test.ml  test_analysis.ml  test_analysis.mli  test_cache.ml  test_cache.mli  test_comments.ml  test_comments.mli  test_doctor.ml  test_doctor.mli  test_integration.ml  test_integration.mli  test_locate.ml  test_locate.mli  test_module_alias.ml  test_module_alias.mli  test_occurrence.ml  test_occurrence.mli  test_output.ml  test_output.mli  test_progress.ml  test_progress.mli  test_prune.ml  test_prune.mli  test_removal.ml  test_removal.mli  test_removal_field.ml  test_removal_field.mli  test_removal_parsing.ml  test_show.ml  test_show.mli  test_system.ml  test_system.mli  test_types.ml  test_types.mli  test_warning.ml  test_warning.mli
test/cram/: README.md  check_merlin.sh  dune
test/cram/basic_functionality.t/: dune-project  run.t
test/cram/build_errors.t/: dune-project  run.t
test/cram/build_errors_warnings.t/: run.t
test/cram/cli.t/: run.t
test/integration/: dune  main.ml  main.mli
(+215 files in other folders)
